<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/insertLayoutID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/addButtonID_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addfirstfragment" />

        <Button
            android:id="@+id/addButtonID_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addsecondfragment" />

        <Button
            android:id="@+id/addButtonID_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addthirdfragment" />

        <Button
            android:id="@+id/replaceButtonID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/replace" />

        <Button
            android:id="@+id/removeButtonID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/removefragment" />
    </LinearLayout>
</LinearLayout>